<resources>
    <string name="app_name">ORganizacion-COordinacion</string>
    <string name="title_activity_intro">IntroAct</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="EmailHint">Tu correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="hola_de_nuevo">¡Hola de nuevo!</string>
    <string name="ForgetPass">¿Olvidaste tu contraseña?</string>
    <string name="NewUser">Nuevo usuario</string>
    <string name="YOurPass">Tu contraseña</string>


    <!--Headings-->
    <string name="heading_one">Quick &amp; Easy Payments</string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Cashless Payment</string>
    <string name="heading_fourth">Pay Anywhere</string>

    <!--Description-->
    <string name="desc_one">Grow your Business By Accepting Card Payments with The New Card Reader</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="mapa_de_google">Mapa de google</string>
    <string name="cuenta">Cuenta</string>
    <string name="chat">Chat</string>
</resources>