<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="UI.Fragments.Fragment_Login">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/FLTV_Hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hola_de_nuevo"

            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="start"
            android:id="@+id/FLTV_Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"

            app:layout_constraintVertical_bias="0.02"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FLTV_Hello"/>

        <EditText
            android:background="?attr/editTextBackground"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/EmailHint"
            android:id="@+id/FLET_Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"

            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FLTV_Email"/>

        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/FLTV_Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintVertical_bias="0.02"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FLET_Email"/>

        <EditText
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="?attr/editTextBackground"
            android:hint="@string/YOurPass"
            android:id="@+id/FLET_Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"

            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FLTV_Password"
            android:importantForAutofill="no" />

        <androidx.appcompat.widget.AppCompatButton
            android:background="?attr/background"
            android:textAllCaps="false"
            android:id="@+id/FLBTN_Login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Aceptar"

            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FLET_Password"
            />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FLBTN_Login">

            <TextView
                android:id="@+id/FLTV_ForgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ForgetPass"
                android:gravity="start|center"
                android:layout_weight="1"
                android:paddingStart="20dp"/>

            <TextView
                android:id="@+id/FLTV_NewUser"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|normal"
                android:text="@string/NewUser"
                android:gravity="end|center"
                android:layout_weight="1"
                android:paddingEnd="20dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>