<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="UI.Fragments.Fragment_ForgetPass">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/FFPTV_Tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Olvidaste tu contraseña? Cáspistas"
            android:fontFamily="@font/simplysansbold"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="start"
            android:id="@+id/FFPTV_Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"

            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FFPTV_Tittle"/>

        <EditText
            android:background="?attr/editTextBackground"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/COM_NEGRO"
            android:hint="@string/EmailHint"
            android:id="@+id/FFPET_Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"

            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FFPTV_Email"/>


        <CheckBox
            android:id="@+id/FFPCB_Terminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Estoy de acuerdo con los Términos de Servicio y Politicas de Privacidad."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FFPET_Email"/>
        <androidx.appcompat.widget.AppCompatButton
            android:background="?attr/background"
            android:textAllCaps="false"
            android:id="@+id/FFPBTN_Login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"

            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FFPCB_Terminos"
            />

        <TextView
            android:id="@+id/FFPTV_INICIO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Tienes ya una cuenta?\nInicia sesión"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FFPBTN_Login"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>